src/test/ui/parser/keyword-abstract.stderr
error: expected identifier, found reserved keyword `abstract`
  --> $DIR/keyword-abstract.rs:2:9
   |
LL |     let abstract = ();
   |         ^^^^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#abstract = ();
   |         ^^^^^^^^^^

error: aborting due to previous error

