src/test/ui/parser/keyword-abstract.rs
fn main() {
    let abstract = (); //~ ERROR expected identifier, found reserved keyword `abstract`
}
